# Amxx-Module-CSWM

./: .gitignore  README.md  cswm.inc  cswm_const.inc
CSWM/: CMakeLists.txt  CSWM.cpp  CSWM.h  Module.cpp
CSWM/182/: AMXX.h
CSWM/18X/: Config.h
CSWM/CSWM/: CSWM.vcxproj
SDK/cssdk/: cvar.h
SDK/metamod/: plinfo.h
